[package]
name = "empyrean-c"
version = "0.7.0-rc.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Joachim Moeyens <joachim@empyrean-dynamics.com>", "Empyrean Dynamics"]
description = "C ABI cdylib for empyrean — builds the libempyrean.{dylib,so,dll} astrodynamics library."
homepage = "https://www.empyrean-dynamics.com"
repository = "https://github.com/Empyrean-Dynamics/empyrean"
readme = "README.md"
license = "BSD-3-Clause"
# Not a Rust crate users depend on — the only output is the libempyrean
# cdylib (and its `include/empyrean.h` header). Distribute the compiled
# artifact via GitHub releases; the source is in this repo.
publish = false

[lib]
name = "empyrean"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# C ABI is a thin shell over empyrean-core. The internal Rust API is
# never re-exported through this crate — only the C symbols are.
# Pinned to the tagged empyrean-core release, fetched from GitHub — the
# same release-pinning empyrean-core itself uses for villeneuve / scott.
# To co-develop a local empyrean-core against this workspace, add a
# `[patch."ssh://…empyrean-core.git"]` path override at the workspace root.
empyrean-core = { git = "ssh://git@github.com/Empyrean-Dynamics/empyrean-core.git", tag = "v0.7.0", features = ["parquet"] }
arrow = "58"
parquet = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[build-dependencies]
cbindgen = "0.29"
