[package]
name = "empyrean-c"
version = "0.9.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Joachim Moeyens <joachim@empyrean-dynamics.com>", "Empyrean Dynamics"]
description = "C ABI cdylib for empyrean — builds the libempyrean.{dylib,so,dll} astrodynamics library."
homepage = "https://www.empyrean-dynamics.com"
repository = "https://github.com/Empyrean-Dynamics/empyrean"
readme = "README.md"
license = "BSD-3-Clause"
# Not a Rust crate users depend on — the only output is the libempyrean
# cdylib (and its `include/empyrean.h` header). Distribute the compiled
# artifact via GitHub releases; the source is in this repo.
publish = false

[lib]
name = "empyrean"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# C ABI is a thin shell over empyrean-core. The internal Rust API is
# never re-exported through this crate — only the C symbols are.
empyrean-core = { git = "ssh://git@github.com/Empyrean-Dynamics/empyrean-core.git", tag = "v0.9.2", features = ["parquet"] }
arrow = "58"
parquet = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# The engine's HTTP client (reqwest -> native-tls) links system OpenSSL on
# Linux. Vendor it statically so libempyrean carries no external libssl /
# libcrypto runtime dependency: the Python wheel bundles the dlopen'd engine as
# a plain file that auditwheel can't see (and so can't vendor its deps for), so
# the engine must be self-contained. macOS uses Security.framework, so this is
# Linux-only; the dependency exists solely to enable openssl's `vendored`
# feature across the build via Cargo feature unification.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
# Test-only: independently re-digests a loaded kernel to verify the
# BuiltSystem handle's captured manifest reports the true SHA-256. Never
# linked into the distributed cdylib.
sha2 = "0.10"
