[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "empyrean"
version = "0.1.0"
description = "Python bindings for the empyrean astrodynamics engine"
authors = [
    { name = "Joachim Moeyens", email = "joachim@empyrean-dynamics.com" },
    { name = "Empyrean Dynamics" },
]
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
