[package]
name = "empyrean-sys"
version = "0.7.0-rc.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Joachim Moeyens <joachim@empyrean-dynamics.com>", "Empyrean Dynamics"]
description = "Low-level FFI bindings to the libempyrean astrodynamics C ABI. For an ergonomic Rust API, use the empyrean crate."
homepage = "https://www.empyrean-dynamics.com"
documentation = "https://docs.rs/empyrean-sys"
repository = "https://github.com/Empyrean-Dynamics/empyrean"
readme = "README.md"
license = "BSD-3-Clause"
# crates.io enforces a 5-keyword max, 20-char-each limit. These five
# describe the FFI nature of the crate so users searching for low-
# level bindings find it; the higher-level `empyrean` crate carries
# the workflow-flavored keywords (propagation / ephemeris / etc.).
keywords = ["astrodynamics", "ffi", "bindings", "sys", "differentiable"]
categories = ["external-ffi-bindings", "science", "aerospace::space-protocols"]
# The pre-generated bindings (src/bindings.rs) ship with the crate, so
# no C header or libclang/bindgen is needed at build time. The build
# script only locates / downloads the prebuilt libempyrean and links it.
include = [
    "src/**/*",
    "build.rs",
    "checksums.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
# Cargo build-script convention for crates that wrap a native library.
# Setting `links` makes Cargo enforce that at most one copy of
# empyrean-sys appears in any final binary's dep graph.
links = "empyrean"

[lib]
name = "empyrean_sys"

[build-dependencies]
# Verifies the pinned SHA-256 of the downloaded prebuilt libempyrean.
# curl / tar / install_name_tool / patchelf are invoked from the build
# script (present on the supported macOS / Linux targets).
sha2 = "0.10"
